added augmented model, multitask model, and metrics notebook

--- a/fashion-encoder.ipynb
+++ b/fashion-encoder.ipynb
@@ -68,10 +68,9 @@
     "bit_size = 32\n",
     "num_epochs = 200\n",
     "batch_size = 500\n",
-    "architecture = '1024'\n",
     "autoencoder_id='final01'\n",
-    "model_path = F'fashion-models/bitsize{bit_size}/{architecture}architecture/'\n",
-    "log_path = F'fashion-logs/autoencoder-{bit_size}-{architecture}-{autoencoder_id}'\n",
+    "model_path = 'fashion-models/'\n",
+    "log_path = F'fashion-logs/autoencoder-{autoencoder_id}'\n",
     "tensorboard = TensorBoard(log_dir=log_path)"
    ]
   },
